# copywriter

./: .gitignore  APOSTILA_COPYWRITER.html  APOSTILA_COPYWRITER.md  CLAUDE.md  MANUAL.md  agent.py  ingest.py  profiles.py  prompt.md  pyproject.toml  render.yaml  stories_prompt.md  transcribe.py  youtube_ingest.py  youtube_urls.txt
apostilas/Narcisismo/: NoteGPT_TRANSCRIPT_11 coisas que você precisar saber sobre o transtorno narcisista  Thaís Bassi.txt  NoteGPT_TRANSCRIPT_A CULPA PELO AFASTAMENTO (CONTATO ZERO).txt  NoteGPT_TRANSCRIPT_A DIFERENÇA ENTRE CASAL COM PAI OMISSO E CASAL ABUSADOR.txt  NoteGPT_TRANSCRIPT_A MÃE ABUSIVA ADICTA.txt  NoteGPT_TRANSCRIPT_A PATOLOGIA DO VÍNCULO COM A MÃE NARCISISTA.txt  NoteGPT_TRANSCRIPT_COMO IDENTIFICAR UM NARCISISTA  Marcos Lacerda, psicólogo.txt  NoteGPT_TRANSCRIPT_COMO LIDAR COM A DINÂMICA FAMILIAR NARCISISTA.txt  NoteGPT_TRANSCRIPT_Como identificar um NARCISISTA  Melhor da Tarde.txt  NoteGPT_TRANSCRIPT_Como é se RELACIONAR com um NARCISISTA - Taryana Rocha (Educação Emocional  Narcisismo).txt  NoteGPT_TRANSCRIPT_MÃES NARCISISTAS   Marcos Lacerda, psicólogo.txt  NoteGPT_TRANSCRIPT_O PAI OMISSO NA DINÂMICA COM A MÃE NARCISISTA.txt  NoteGPT_TRANSCRIPT_O QUE UM NARCISISTA QUER DE VOCÊ COMO IDENTIFICAR E SE PROTEGER! com Dra Anahy.txt  NoteGPT_TRANSCRIPT_SINAIS DE QUE VOCÊ PODE ESTAR COM UM NARCISISTA.txt  NoteGPT_TRANSCRIPT_TER PAIS ABUSIVOS TE TORNA ALGUÉM ABUSIVO.txt
apostilas/Relacinamentos/: 11 sinais relacioamnto abusiso.txt  8 sinais que seu relacionamento e toxico.txt  Relacionamento Toxico - Augusto Cury.txt  (+5 more)
(+44 files in other folders)
