[project]
name = "copywriter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.5.4",
    "chonkie[semantic]>=1.5.6",
    "chromadb>=1.5.1",
    "fastapi>=0.133.0",
    "openai>=2.24.0",
    "pypdf>=6.7.3",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.47",
    "tavily>=1.1.0",
    "tavily-python>=0.7.21",
    "youtube-transcript-api>=1.0.0",
]
